ancom pathways rindtype

--- a/metagenomics.ipynb
+++ b/metagenomics.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "id": "a284a5a8-0b6d-4466-9a7e-ee8fe71db068",
    "metadata": {},
    "outputs": [],
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "fdc9ead7-7cb5-4441-8818-503f5395359f",
    "metadata": {},
    "outputs": [
@@ -687,13 +687,13 @@
     "! qiime feature-table filter-samples \\\n",
     "    --i-table $data_dir/picrust2_results/pathway_abundance.qza \\\n",
     "    --m-metadata-file $data_dir/food-metadata.tsv \\\n",
-    "    --p-where \"[rindtype]='washed' AND [rindtype]='bloomy'\" \\\n",
+    "    --p-where \"[rindtype]='washed' OR [rindtype]='bloomy'\" \\\n",
     "    --o-filtered-table $data_dir/picrust2_results/pathway_abundance_washed_bloomy.qza"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "69276282-74a2-42b7-810d-7f1107463439",
    "metadata": {},
    "outputs": [],
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "id": "ba5cef81-2c7e-4f58-b3de-fe6bc6b4f6d7",
    "metadata": {},
    "outputs": [
@@ -728,20 +728,202 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>1CMET2-PWY</th>\n",
+       "      <th>3-HYDROXYPHENYLACETATE-DEGRADATION-PWY</th>\n",
+       "      <th>AEROBACTINSYN-PWY</th>\n",
+       "      <th>ALL-CHORISMATE-PWY</th>\n",
+       "      <th>ANAEROFRUCAT-PWY</th>\n",
+       "      <th>ANAGLYCOLYSIS-PWY</th>\n",
+       "      <th>ARG+POLYAMINE-SYN</th>\n",
+       "      <th>ARGDEG-PWY</th>\n",
+       "      <th>ARGORNPROST-PWY</th>\n",
+       "      <th>ARGSYN-PWY</th>\n",
+       "      <th>...</th>\n",
+       "      <th>THISYN-PWY</th>\n",
+       "      <th>THREOCAT-PWY</th>\n",
+       "      <th>THRESYN-PWY</th>\n",
+       "      <th>TRNA-CHARGING-PWY</th>\n",
+       "      <th>TRPSYN-PWY</th>\n",
+       "      <th>TYRFUMCAT-PWY</th>\n",
+       "      <th>UBISYN-PWY</th>\n",
+       "      <th>UDPNAGSYN-PWY</th>\n",
+       "      <th>VALDEG-PWY</th>\n",
+       "      <th>VALSYN-PWY</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>11488.CSB290</th>\n",
+       "      <td>12637.890024</td>\n",
+       "      <td>906.965037</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>11934.402822</td>\n",
+       "      <td>11063.274587</td>\n",
+       "      <td>663.536056</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>5593.865049</td>\n",
+       "      <td>10377.259212</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1893.451621</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>9614.696886</td>\n",
+       "      <td>4609.063843</td>\n",
+       "      <td>9756.335402</td>\n",
+       "      <td>10.294863</td>\n",
+       "      <td>288.190037</td>\n",
+       "      <td>9883.616193</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>17027.740368</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11488.CSB291</th>\n",
+       "      <td>9812.885169</td>\n",
+       "      <td>1181.754274</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>9908.779207</td>\n",
+       "      <td>9114.048202</td>\n",
+       "      <td>902.283025</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>6031.125195</td>\n",
+       "      <td>8649.332999</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2392.746116</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>7949.604075</td>\n",
+       "      <td>4321.629940</td>\n",
+       "      <td>8297.595173</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>346.755855</td>\n",
+       "      <td>8312.001306</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>15706.753487</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11488.CSB292</th>\n",
+       "      <td>10233.505770</td>\n",
+       "      <td>767.084806</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>9860.887213</td>\n",
+       "      <td>9155.356721</td>\n",
+       "      <td>556.104221</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>4472.335197</td>\n",
+       "      <td>8572.653613</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1604.466674</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>7986.461627</td>\n",
+       "      <td>3470.535997</td>\n",
+       "      <td>8192.541574</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>252.286194</td>\n",
+       "      <td>8193.325410</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>14055.001076</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11488.CSB299</th>\n",
+       "      <td>925.653823</td>\n",
+       "      <td>188.904398</td>\n",
+       "      <td>0.297164</td>\n",
+       "      <td>21.057654</td>\n",
+       "      <td>1529.206959</td>\n",
+       "      <td>1616.659405</td>\n",
+       "      <td>154.361302</td>\n",
+       "      <td>35.618171</td>\n",
+       "      <td>762.807619</td>\n",
+       "      <td>1304.051567</td>\n",
+       "      <td>...</td>\n",
+       "      <td>64.715543</td>\n",
+       "      <td>0.01318</td>\n",
+       "      <td>1419.361116</td>\n",
+       "      <td>1169.957038</td>\n",
+       "      <td>1557.423974</td>\n",
+       "      <td>184.096137</td>\n",
+       "      <td>117.397328</td>\n",
+       "      <td>1433.639443</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2084.415143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11488.CSB300</th>\n",
+       "      <td>3071.639373</td>\n",
+       "      <td>491.933085</td>\n",
+       "      <td>0.460374</td>\n",
+       "      <td>599.410248</td>\n",
+       "      <td>3598.444000</td>\n",
+       "      <td>3986.662395</td>\n",
+       "      <td>1313.961133</td>\n",
+       "      <td>665.789745</td>\n",
+       "      <td>2106.527589</td>\n",
+       "      <td>3760.512195</td>\n",
+       "      <td>...</td>\n",
+       "      <td>662.562468</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>3775.423286</td>\n",
+       "      <td>3137.012254</td>\n",
+       "      <td>4242.688306</td>\n",
+       "      <td>1952.066295</td>\n",
+       "      <td>1418.647685</td>\n",
+       "      <td>3790.448335</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5404.696700</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 452 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: []\n",
-       "Index: []"
+       "                1CMET2-PWY  3-HYDROXYPHENYLACETATE-DEGRADATION-PWY  \\\n",
+       "11488.CSB290  12637.890024                              906.965037   \n",
+       "11488.CSB291   9812.885169                             1181.754274   \n",
+       "11488.CSB292  10233.505770                              767.084806   \n",
+       "11488.CSB299    925.653823                              188.904398   \n",
+       "11488.CSB300   3071.639373                              491.933085   \n",
+       "\n",
+       "              AEROBACTINSYN-PWY  ALL-CHORISMATE-PWY  ANAEROFRUCAT-PWY  \\\n",
+       "11488.CSB290           0.000000            0.000000      11934.402822   \n",
+       "11488.CSB291           0.000000            0.000000       9908.779207   \n",
+       "11488.CSB292           0.000000            0.000000       9860.887213   \n",
+       "11488.CSB299           0.297164           21.057654       1529.206959   \n",
+       "11488.CSB300           0.460374          599.410248       3598.444000   \n",
+       "\n",
+       "              ANAGLYCOLYSIS-PWY  ARG+POLYAMINE-SYN  ARGDEG-PWY  \\\n",
+       "11488.CSB290       11063.274587         663.536056    0.000000   \n",
+       "11488.CSB291        9114.048202         902.283025    0.000000   \n",
+       "11488.CSB292        9155.356721         556.104221    0.000000   \n",
+       "11488.CSB299        1616.659405         154.361302   35.618171   \n",
+       "11488.CSB300        3986.662395        1313.961133  665.789745   \n",
+       "\n",
+       "              ARGORNPROST-PWY    ARGSYN-PWY  ...   THISYN-PWY  THREOCAT-PWY  \\\n",
+       "11488.CSB290      5593.865049  10377.259212  ...  1893.451621       0.00000   \n",
+       "11488.CSB291      6031.125195   8649.332999  ...  2392.746116       0.00000   \n",
+       "11488.CSB292      4472.335197   8572.653613  ...  1604.466674       0.00000   \n",
+       "11488.CSB299       762.807619   1304.051567  ...    64.715543       0.01318   \n",
+       "11488.CSB300      2106.527589   3760.512195  ...   662.562468       0.00000   \n",
+       "\n",
+       "              THRESYN-PWY  TRNA-CHARGING-PWY   TRPSYN-PWY  TYRFUMCAT-PWY  \\\n",
+       "11488.CSB290  9614.696886        4609.063843  9756.335402      10.294863   \n",
+       "11488.CSB291  7949.604075        4321.629940  8297.595173       0.000000   \n",
+       "11488.CSB292  7986.461627        3470.535997  8192.541574       0.000000   \n",
+       "11488.CSB299  1419.361116        1169.957038  1557.423974     184.096137   \n",
+       "11488.CSB300  3775.423286        3137.012254  4242.688306    1952.066295   \n",
+       "\n",
+       "               UBISYN-PWY  UDPNAGSYN-PWY  VALDEG-PWY    VALSYN-PWY  \n",
+       "11488.CSB290   288.190037    9883.616193         0.0  17027.740368  \n",
+       "11488.CSB291   346.755855    8312.001306         0.0  15706.753487  \n",
+       "11488.CSB292   252.286194    8193.325410         0.0  14055.001076  \n",
+       "11488.CSB299   117.397328    1433.639443         0.0   2084.415143  \n",
+       "11488.CSB300  1418.647685    3790.448335         0.0   5404.696700  \n",
+       "\n",
+       "[5 rows x 452 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -752,32 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "d1e423d8-297c-4ccb-a1bd-e85999bd8cd2",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "CE/picrust2_results/pathway_abundance_washed_bloomy.qzv does not exist.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [8]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mVisualization\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mdata_dir\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m/picrust2_results/pathway_abundance_washed_bloomy.qzv\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/opt/conda/lib/python3.8/site-packages/qiime2/sdk/result.py:66\u001b[0m, in \u001b[0;36mResult.load\u001b[0;34m(cls, filepath)\u001b[0m\n\u001b[1;32m     63\u001b[0m \u001b[38;5;129m@classmethod\u001b[39m\n\u001b[1;32m     64\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mload\u001b[39m(\u001b[38;5;28mcls\u001b[39m, filepath):\n\u001b[1;32m     65\u001b[0m     \u001b[38;5;124;03m\"\"\"Factory for loading Artifacts and Visualizations.\"\"\"\u001b[39;00m\n\u001b[0;32m---> 66\u001b[0m     archiver \u001b[38;5;241m=\u001b[39m \u001b[43marchive\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mArchiver\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilepath\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     68\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m Artifact\u001b[38;5;241m.\u001b[39m_is_valid_type(archiver\u001b[38;5;241m.\u001b[39mtype):\n\u001b[1;32m     69\u001b[0m         result \u001b[38;5;241m=\u001b[39m Artifact\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__new__\u001b[39m(Artifact)\n",
-      "File \u001b[0;32m/opt/conda/lib/python3.8/site-packages/qiime2/core/archive/archiver.py:299\u001b[0m, in \u001b[0;36mArchiver.load\u001b[0;34m(cls, filepath)\u001b[0m\n\u001b[1;32m    297\u001b[0m \u001b[38;5;129m@classmethod\u001b[39m\n\u001b[1;32m    298\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mload\u001b[39m(\u001b[38;5;28mcls\u001b[39m, filepath):\n\u001b[0;32m--> 299\u001b[0m     archive \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mcls\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_archive\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilepath\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    300\u001b[0m     Format \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mcls\u001b[39m\u001b[38;5;241m.\u001b[39mget_format_class(archive\u001b[38;5;241m.\u001b[39mversion)\n\u001b[1;32m    301\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m Format \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
-      "File \u001b[0;32m/opt/conda/lib/python3.8/site-packages/qiime2/core/archive/archiver.py:259\u001b[0m, in \u001b[0;36mArchiver.get_archive\u001b[0;34m(cls, filepath)\u001b[0m\n\u001b[1;32m    257\u001b[0m filepath \u001b[38;5;241m=\u001b[39m pathlib\u001b[38;5;241m.\u001b[39mPath(filepath)\n\u001b[1;32m    258\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m filepath\u001b[38;5;241m.\u001b[39mexists():\n\u001b[0;32m--> 259\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m does not exist.\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m filepath)\n\u001b[1;32m    261\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m _ZipArchive\u001b[38;5;241m.\u001b[39mis_archive_type(filepath):\n\u001b[1;32m    262\u001b[0m     archive \u001b[38;5;241m=\u001b[39m _ZipArchive(filepath)\n",
-      "\u001b[0;31mValueError\u001b[0m: CE/picrust2_results/pathway_abundance_washed_bloomy.qzv does not exist."
-     ]
-    }
-   ],
-   "source": [
-    "Visualization.load(f'{data_dir}/picrust2_results/pathway_abundance_washed_bloomy.qzv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "id": "95ad4ad6-8e6b-4eaa-80a6-eac4de67584c",
    "metadata": {},
    "outputs": [
@@ -798,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "id": "0e066c46-f978-4686-815f-6c0da8a0d4ca",
    "metadata": {},
    "outputs": [
@@ -806,11 +963,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[31m\u001b[1mPlugin error from composition:\n",
-      "\n",
-      "  `ids_to_keep` must contain at least one ID.\n",
-      "\n",
-      "Debug info has been saved to /tmp/qiime2-q2cli-err-yukzg34z.log\u001b[0m\n",
+      "\u001b[32mSaved Visualization to: CE/pa_ancom_rindtype_bloomy_vs_washed.qzv\u001b[0m\n",
       "\u001b[0m"
      ]
     }
@@ -826,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "id": "10e5cacf-f6f7-4cab-b67d-422dd4b289e4",
    "metadata": {},
    "outputs": [
@@ -863,13 +1016,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-fd4w5mlp')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-yd8fzoxy')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
-       "<visualization: Visualization uuid: 9cacd381-c903-4b17-aed9-5efe8cbbda1b>"
+       "<visualization: Visualization uuid: 6a23a8db-6bd8-456a-be44-c447fc517850>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -880,10 +1033,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "193d178b-b8ad-4c4a-8056-474c417b4a59",
+   "id": "ba1f4dd1-f6c3-4bca-b8bf-cd9831e38fba",
    "metadata": {},
    "source": [
-    "a lot of different pathways but ugly volcanoplot... it starts bottom left and goes to right up corner..."
+    "For washed vs bloomy the following significantly different pathways were found:\n",
+    "- PWY-6397\twith W = 451 -> more abundant in washed\n",
+    "- PWY0-1338\twith W = 442 -> more abundant in bloomy\n",
+    "- PWY-5005\twith W = 437 -> more abundant in washed\n",
+    "- P164-PWY\twith W = 429 -> more abundant in washed\n",
+    "- PWY-6107\twith W = 424 -> more abundant in washed\n",
+    "- PWY-6942\twith W = 421 -> more abundant in washed\n",
+    "- PWY-6629\twith W = 419 -> more abundant in washed"
    ]
   },
   {
