--- a/metagenomics.ipynb
+++ b/metagenomics.ipynb
@@ -1097,10 +1097,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "46d13c2b-a013-406f-b2a8-dab13fc57bb7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved Visualization to: CE/pa_ancom_pasteurized.qzv\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
    "source": [
     "! qiime composition ancom \\\n",
     "    --i-table $data_dir/picrust2_results/pathway_abundance_differences.qza \\\n",
